# qcd_ml_accel

./: README.rst  meson.build  pyproject.toml  setup.py
src/qcd_ml_accel/: __init__.py  pool4d.cpp  pool4d.py  test.cpp
test/: conftest.py  test_01_v_4pool.py  test_02_v_4pool_grad.py  test_v_4pool.py
