[project]
name="qcd_ml_accel"
authors = [
    {name="Daniel Knüttel", email="daniel.knuettel@physik.uni-regensburg.de"}
]
description = "C++ accelerator code for qcd_ml"
requires-python=">=3.4"
readme="README.rst"
dependencies=['torch']

version="0.0.1"

[project.urls]
repository="https://github.com/daknuett/qcd_ml_accel"
homepage="https://github.com/daknuett/qcd_ml_accel"

[build-system]
requires = [
    "setuptools",
    "torch",
]
build-backend = "setuptools.build_meta"
